k8s/6_success-custom-grafana-keycloak-connect-oauth-login/keycloak-custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: test-0923
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: 017820660901.dkr.ecr.ap-northeast-2.amazonaws.com/keycloak-custom:latest
        args:
          - start
          - "--proxy=edge"  # Reverse proxy 설정
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: test-0923
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
